added wait handler

--- a/WebDeploymentTest.template
+++ b/WebDeploymentTest.template
@@ -132,8 +132,7 @@
           " -r WebPubTest",
           " --region ", { "Ref" : "AWS::Region" }, "\n",
 		  
-		  "cfn-signal.exe -e %ERRORLEVEL%", 
-		  " --stack ", { "Ref" : "AWS::StackName" }, "\n",
+		  "cfn-signal.exe -e %ERRORLEVEL% ", { "Fn::Base64" : { "Ref" : "%WAIT_HANDLE%" }}, "\n",
           
           "</script>"
           ]]}},
@@ -143,6 +142,19 @@
                 "Value" : "WebPubTest"
             }
          ]
+      }
+    },
+	
+	"%WAIT_HANDLE%" : {
+      "Type" : "AWS::CloudFormation::WaitConditionHandle"
+    },
+
+    "%WAIT_HANDLE%Condition" : {
+      "Type" : "AWS::CloudFormation::WaitCondition",
+      "DependsOn" : "WebPubTest",
+      "Properties" : {
+        "Handle" : {"Ref" : "%WAIT_HANDLE%"},
+        "Timeout" : "3600"
       }
     }
   },
